bump java to v25 and gradle and jserialcomm